[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backporter"
version = "0.1.0"
description = "Backport GitHub PRs to a target branch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyGithub>=2.0.0",
]

[project.scripts]
backporter = "backporter.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backporter*"]
